--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ src/agent/api_key.txt
 .env.local 
 .vscode/extensions.json
 gpt_caching/
-final_result/
+final_results/
 somo/
 poetry.lock
 api_key.txt
