--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ src/agent/api_key.txt
 .env.local 
 .vscode/extensions.json
 gpt_caching/
-final_results/
+final_results/positions
 poetry.lock
 api_key.txt
 .env
 imgs/
+mesh_file/
