--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ gpt_caching/
 final_results/positions
 poetry.lock
 api_key.txt
+__pycache__/
+src/agent/__pycache__/
+src/__pycache__/
 
+src/api_file.txt
 imgs/
 mesh_file/
