--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,19 @@ src/agent/api_key.txt
 *.key
 .env
 .vscode/extensions.json
-gpt_caching/
-final_results/positions
+assets/gpt_caching
+assets/final_results/positions
+assets/imgs
+assets/data/__pycache__/
 poetry.lock
-api_key.txt
+
 __pycache__/
 src/agent/__pycache__/
+src/prompt/__pycache__/
+src/pybullet/__pycache__/
+src/settings/__pycache__/
+src/somo/__pycache__/
+src/structure/__pycache__/
+src/utils/__pycache__/
 src/__pycache__/
-
-src/api_file.txt
-imgs/
-mesh_file/
+.gitattributes
